src/styles/_config.scss
$tf-media-breakpoints: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 1024px,
  xl: 1399px
) !default;

$tf-state-colors: (
  brand: (
    base: #2D2D2D,
    inverse: #ffffff
  ),
  light: (
    base: #F2F2F2,
    inverse: #ffffff
  ),
  content-bg: (
    base: #fff,
    inverse: #fff
  ),

  // overwrite bootstrap colors
  primary: (
    base: #2D2D2D,
    inverse: #ffffff
  ),
  secondary: (
    base: #34C759,
    inverse: #ffffff
  ),
  success: (
    base: #62c965,
    inverse: #ffffff
  ),
  info: (
    base: #6BFFAF,
    inverse: #ffffff
  ),
  warning: (
    base: #FFDF6B,
    inverse: #111111
  ),
  danger: (
    base: #FF5454,
    inverse: #ffffff
  )
) !default;

